compiler/testData/diagnostics/tests/regressions/kt10243.fir.kt
konst f: Boolean = true
private fun doUpdateRegularTasks() {
    try {
        while (f) {
            konst xmlText = <!UNRESOLVED_REFERENCE!>getText<!>()
            if (xmlText == null) {}
            else {
                xmlText.<!UNRESOLVED_REFERENCE!>konstue<!> = 0 // !!!
            }
        }

    }
    finally {
        fun execute() {}
    }
}
